# apple-ecosystem-mcp

./: .git-aliases  .gitignore  .mcp.json  Apple_MCP_Server_Implementation_Plan.docx  CLAUDE.md  FEATURES_QUICK_REF.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PHASE_6_COMPLETION.md  PRIVACY.md  PUBLISH_PYPI.sh  README.md  RELEASE.sh  RELEASE_GUIDE.md  TESTING_GUIDE.md  TEST_COMMANDS.md  apple-ecosystem-mcp.dxt  manifest.json  manifest.local.json  pyproject.toml  test_features_local.py  test_mail_integration.py  ~$ple_MCP_Server_Implementation_Plan.docx
docs/: FEATURE_TODOS.md  TEST_PLAN.md  architecture.md  session-state.md
server/: runner.py
src/apple_ecosystem_mcp/: __init__.py  __main__.py  bridge.py  main.py  permissions.py  server.py
src/apple_ecosystem_mcp/tools/: __init__.py  calendar.py  contacts.py  icloud.py  mail.py  reminders.py
tests/: conftest.py  test_bridge.py  test_main.py  test_permissions.py  test_server.py
tests/integration/: test_mail_integration.py
tests/live/: __init__.py  test_live_smoke.py
tests/tools/: __init__.py  test_calendar.py  test_contacts.py  test_icloud.py  test_mail.py  test_reminders.py
